--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bloomer": "^0.6.5",
+    "bootstrap": "^4.4.1",
+    "bulma": "^0.8.2",
     "dotenv": "^8.2.0",
+    "emoji-mart": "^3.0.0",
     "emoji-picker-react": "^3.1.4",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
